--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId = "main-menu" content-id="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-list>
+        <ion-item>
+          <!-- <ion-icon name ="mail" slot="start"></ion-icon> -->
+          <ion-label> Inbox </ion-label>
+        </ion-item>
+        <ion-item>
+         <ion-label> Outbox </ion-label>
+        </ion-item>
+        <ion-item>
+        
+          <ion-label> Fav  </ion-label>
+        </ion-item>
+        <ion-item>
+        
+          <ion-label> Inbox1 </ion-label>
+        </ion-item>
+        <ion-item>
+        
+          <ion-label> Inbox2 </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
