--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,34 @@
 <ion-app>
   <ion-menu menuId = "main-menu" content-id="main">
     <ion-header>
-      <ion-toolbar>
+      <ion-toolbar [routerLink]="['/home']">
         <ion-title>Menu</ion-title>
       </ion-toolbar>
     </ion-header>
 
     <ion-content>
       <ion-list>
-        <ion-item>
-          <!-- <ion-icon name ="mail" slot="start"></ion-icon> -->
-          <ion-label> Inbox </ion-label>
+        <ion-item [routerLink]="['/home']">
+          <ion-icon name="home" slot="start"></ion-icon>
+          <ion-label> Home </ion-label>
+        </ion-item>
+        <ion-item [routerLink]="['/login']">
+          <ion-icon name ="log-in" slot="start"></ion-icon> 
+          <ion-label> Login </ion-label>
         </ion-item>
         <ion-item>
-         <ion-label> Outbox </ion-label>
+          <ion-icon name="logo-angular" slot="start"></ion-icon>
+         <ion-label> Angular </ion-label>
         </ion-item>
         <ion-item>
+          <ion-icon name="logo-apple" slot="start"></ion-icon>
+          <ion-label> Apple  </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="logo-android" slot="start"></ion-icon>
+          <ion-label> Android </ion-label>
+        </ion-item>
         
-          <ion-label> Fav  </ion-label>
-        </ion-item>
-        <ion-item>
-        
-          <ion-label> Inbox1 </ion-label>
-        </ion-item>
-        <ion-item>
-        
-          <ion-label> Inbox2 </ion-label>
-        </ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
