--- a/src/app/pages/article/article.page.html
+++ b/src/app/pages/article/article.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title> HOME </ion-title>
+    <ion-title>ARTICLES</ion-title>
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
@@ -8,5 +8,8 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-searchbar show-clear-button="always"></ion-searchbar>
+  <ion-card-content>
+  THIS IS ARTICLE 1.   
+  </ion-card-content>
 </ion-content>
