--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,3 +34,6 @@
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
+
+
+<!-- <ion-icon name="log-out-outline"></ion-icon> -->
