--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,42 +8,66 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-	<ion-grid>
-	  <ion-row>
-		<ion-col size="6" class="company-info">
-		  <h1>SRD-JOURNAL</h1>
-		  <p>Company Description</p>
-		  <!-- Add any other company-related information here -->
-		</ion-col>
-		<div></div>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="7.2" class="company-info">
+        <h1>SRD-JOURNAL</h1>
+        <p>Company Description</p>
+        <!-- Add any other company-related information here -->
+      </ion-col>
+      <div></div>
 
-		
-  
-		<ion-col size="5.5" class="login-form">
-		  <form (ngSubmit)="login()" [formGroup]="credentials" class="form">
-			<ion-item  class="ion-input">
-			  <ion-input type="email" placeholder="Email" formControlName="email"  autocomplete="off"></ion-input>
-			  <ion-note slot="error" *ngIf="(email?.dirty || email?.touched) && email?.errors">
-				Email is invalid!!
-			  </ion-note>
-			</ion-item>
-			<ion-item  class="ion-input">
-			  <ion-input type="password" placeholder="Password" formControlName="password" autocomplete="off"></ion-input>
-			  <ion-note slot="error" *ngIf="(password?.dirty || password?.touched) && password?.errors">
-				Password needs to be at least 6 characters!
-			  </ion-note>
-			</ion-item>
-			<ion-item class="buttons">
-			  <ion-button class="btn" type="submit" expand="block"  [disabled]="!credentials.valid">Log-in</ion-button>
-			  <ion-button class="btn" type="button" expand="block" color="secondary" (click)="register()">Create account</ion-button>
-			</ion-item>
-		  </form>
-		</ion-col>
-	  </ion-row>
-	</ion-grid>
-  </ion-content>
-  
-  <!-- <ion-content class="ion-padding">
+      <ion-col size="4.3" class="login-form">
+        <form (ngSubmit)="login()" [formGroup]="credentials" class="form">
+          <ion-item>
+            <ion-input
+              class="input"
+              type="email"
+              placeholder="Email"
+              formControlName="email"
+              autocomplete="off"
+            ></ion-input>
+            <ion-note
+              slot="error"
+              *ngIf="(email?.dirty || email?.touched) && email?.errors"
+            >
+              Email is invalid!!
+            </ion-note>
+          </ion-item>
+          <ion-item>
+            <ion-input
+              class="input"
+              type="password"
+              placeholder="Password"
+              formControlName="password"
+              autocomplete="off"
+            ></ion-input>
+            <ion-note
+              slot="error"
+              *ngIf="(password?.dirty || password?.touched) && password?.errors"
+            >
+              Password needs to be at least 6 characters!
+            </ion-note>
+          </ion-item>
+          <ion-item class="ion-input">
+            <ion-button class="login-btn" type="submit" expand="block"
+              >Log-in</ion-button
+            >
+            <ion-button
+              class="login-btn"
+              type="button"
+              expand="block"
+              (click)="register()"
+              >Create account</ion-button
+            >
+          </ion-item>
+        </form>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+<!-- <ion-content class="ion-padding">
 	<form (ngSubmit)="login()" [formGroup]="credentials" class="form">
 		
 
