--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu menuId = "main-menu" content-id="main">
+  <ion-menu menuId="main-menu" content-id="main">
     <ion-header>
       <ion-toolbar [routerLink]="['/home']">
         <ion-title>Menu</ion-title>
@@ -12,23 +12,30 @@
           <ion-icon name="home" slot="start"></ion-icon>
           <ion-label> Home </ion-label>
         </ion-item>
-       
-        <ion-item  [routerLink]="['/journal']">
+
+        <ion-item [routerLink]="['/journal']">
           <ion-icon name="logo-angular" slot="start"></ion-icon>
-         <ion-label> Journal  </ion-label>
+          <ion-label> Journal </ion-label>
         </ion-item>
-        <ion-item  [routerLink]="['/article']">
+        <ion-item [routerLink]="['/article']">
           <ion-icon name="book-outline" slot="start"></ion-icon>
           <ion-label> Article </ion-label>
         </ion-item>
-        <ion-item  [routerLink]="['/table']">
+        <ion-item [routerLink]="['/table']">
           <ion-icon name="logo-android" slot="start"></ion-icon>
           <ion-label> Table of Content </ion-label>
         </ion-item>
-        <ion-item [routerLink]="['/login']">
-          <ion-icon name ="log-in" slot="start"></ion-icon> 
-          <ion-label> Login </ion-label>
+        <ion-item *ngIf="isUserSignedIn; else loginButton" (click)="logout()">
+          <ion-icon name="log-out" slot="start"></ion-icon>
+          <ion-label>Logout</ion-label>
         </ion-item>
+        <ng-template #loginButton>
+          <ion-item [routerLink]="['/login']">
+            <ion-icon name="log-in" slot="start"></ion-icon>
+            <ion-label>Login</ion-label>
+          </ion-item>
+        </ng-template>
+
       </ion-list>
     </ion-content>
   </ion-menu>
