--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,29 +8,29 @@
 
     <ion-content>
       <ion-list>
-        <ion-item [routerLink]="['/home']">
+        <ion-item [routerLink]="['/home']" (click)="closeMenu()">
           <ion-icon name="home" slot="start"></ion-icon>
           <ion-label> Home </ion-label>
         </ion-item>
 
-        <ion-item [routerLink]="['/journal']">
+        <ion-item [routerLink]="['/journal']" (click)="closeMenu()">
           <ion-icon name="logo-angular" slot="start"></ion-icon>
           <ion-label> Journal </ion-label>
         </ion-item>
-        <ion-item [routerLink]="['/article']">
+        <ion-item [routerLink]="['/article']" (click)="closeMenu()">
           <ion-icon name="book-outline" slot="start"></ion-icon>
           <ion-label> Article </ion-label>
         </ion-item>
-        <ion-item [routerLink]="['/table']">
+        <ion-item [routerLink]="['/table']" (click)="closeMenu()">
           <ion-icon name="logo-android" slot="start"></ion-icon>
           <ion-label> Table of Content </ion-label>
         </ion-item>
-        <ion-item *ngIf="isUserSignedIn; else loginButton" (click)="logout()">
+        <ion-item *ngIf="isUserSignedIn; else loginButton" (click)="logout()" (click)="closeMenu()">
           <ion-icon name="log-out" slot="start"></ion-icon>
           <ion-label>Logout</ion-label>
         </ion-item>
         <ng-template #loginButton>
-          <ion-item [routerLink]="['/login']">
+          <ion-item [routerLink]="['/login']" (click)="closeMenu()">
             <ion-icon name="log-in" slot="start"></ion-icon>
             <ion-label>Login</ion-label>
           </ion-item>
