--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -84,46 +84,44 @@ p {
   margin-bottom: 10px;
 }
 
-//   ion-item {
-//     background-color: transparent !important;
-//     .ion-input {
-//        font-size: 16px;
-//         padding: 10px;
-//         --background: transparent;
 
-//     }
+@media only screen and (max-width: 768px) {
+  ion-grid{
+    width: auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
+  ion-grid ion-row{
+    display: flex;
+    flex-direction: column;
+  }
 
-//   background-color: transparent !important;
-//   justify-content: flex-end;
+  ion-col.company-info{
+    width: 100%;
+    order: 1;
+    text-align: center;
+    h1{
+      font-size: 24px;
+      font-weight: bold;
+      margin-top:-10rem;
+    }
+    p{
+      font-size: 14px;
+      margin: 8px 0;
+    }
+  }
 
-//       .btn {
-//         font-size: 80%;
-//         // color: black;
-//         // padding: 10px;
-
-//         //   background-color: black;
-
-//       }
-
-//  .ion-padding{
-//     background-image: url('../../../assets/bgimg.jpg');
-//  }
-//  form {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     height: 70%;
-//     margin: auto;
-//     margin-top: 10%;
-//     max-width: 85%;
-//      background-image: url('../../../assets/bgimg.jpg');
-//     box-shadow: 0px 0px 10px rgb(238, 232, 232);
-//   }
-//  ion-item {
-//     --background: transparent; /* remove the default background color */
-//   }
-
-//   ion-button {
-//     width: 100%;
-//   }
+  ion-col.login-form{  
+    order: 2;
+    margin-top:-5rem;
+    margin-left: 0.5rem;
+    .form{
+      margin-left: -4rem;
+      margin-top: -8rem;
+      width: 20rem;
+      height: 22rem;
+    }
+  }
+}
