--- a/src/app/pages/article/article.page.html
+++ b/src/app/pages/article/article.page.html
@@ -7,9 +7,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-searchbar show-clear-button="always"></ion-searchbar>
-  <ion-card-content>
+<ion-content class="container">
+  <ion-searchbar show-clear-button="always" class="search-bar"></ion-searchbar>
+  <ion-card-content class="search-list">
   THIS IS ARTICLE 1.   
   </ion-card-content>
 </ion-content>
