--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,5 +1,7 @@
-h1{
-  text-align: center;
-  font-size: 50px;
-  margin-top: 100PX;
+.home-page {
+  h1 {
+    text-align: center;
+    font-size: 50px;
+    margin-top: 100px;
+  }
 }
