--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,9 +4,14 @@
     <ion-buttons slot="start">
       <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="end" [routerLink]="['/login']">
+      <ion-button onClick="logout()"
+        ><ion-icon name="log-out-outline"></ion-icon
+      ></ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-<h1>WELCOME TO SRD-READER !!!</h1>
+<ion-content class="home-page">
+  <h1>WELCOME TO SRD-READER !!!</h1>
 </ion-content>
