--- a/src/app/pages/journal/journal.page.html
+++ b/src/app/pages/journal/journal.page.html
@@ -7,39 +7,29 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
-  <ion-card  >
+<ion-content>
+  <ion-card class="article-list">
     <ion-card-header>
       <ion-card-title>Current Reading</ion-card-title>
       <ion-card-subtitle>Article 1</ion-card-subtitle>
     </ion-card-header>
 
-    <ion-card-content>
-      Description for the card content. 
-    </ion-card-content>
+    <ion-card-content> Description for the card content. </ion-card-content>
   </ion-card>
-  <ion-card >
+  <ion-card class="article-list">
     <ion-card-header>
       <!-- <ion-card-title>Current Reading</ion-card-title> -->
       <ion-card-subtitle>Article 2</ion-card-subtitle>
     </ion-card-header>
 
-    <ion-card-content>
-      Description for the card content. 
-    </ion-card-content>
-  </ion-card> 
-  <ion-card >
+    <ion-card-content> Description for the card content. </ion-card-content>
+  </ion-card>
+  <ion-card class="article-list">
     <ion-card-header>
       <!-- <ion-card-title>Current Reading</ion-card-title> -->
       <ion-card-subtitle>Article 3</ion-card-subtitle>
     </ion-card-header>
 
-    <ion-card-content>
-      Description for the card content. 
-    </ion-card-content>
+    <ion-card-content> Description for the card content. </ion-card-content>
   </ion-card>
-  
 </ion-content>
-
-
-
