--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,17 +7,16 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-grid>
-    <ion-row>
-      <ion-col size="7.2" class="company-info">
+<ion-content>
+  <ion-grid class="container">
+    <ion-row class="container-content">
+      <ion-col size-lg="7.2" size-md="7.2" size-sm="12" class="company-info">
         <h1>SRD-JOURNAL</h1>
         <p>Company Description</p>
         <!-- Add any other company-related information here -->
       </ion-col>
-      <div></div>
 
-      <ion-col size="4.3" class="login-form">
+      <ion-col size-lg="4.3" size-md="3.3" size-sm="10" class="login-form">
         <form (ngSubmit)="login()" [formGroup]="credentials" class="form">
           <ion-item>
             <ion-input
@@ -49,48 +48,21 @@
               Password needs to be at least 6 characters!
             </ion-note>
           </ion-item>
-          <ion-item class="ion-input">
-            <ion-button class="login-btn" type="submit" expand="block"
+
+          <div class="form-button">
+            <ion-button class="login-button" type="submit" expand="block"
               >Log-in</ion-button
             >
             <ion-button
-              class="login-btn"
+              class="login-button"
               type="button"
               expand="block"
               (click)="register()"
               >Create account</ion-button
             >
-          </ion-item>
+          </div>
         </form>
       </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
-
-<!-- <ion-content class="ion-padding">
-	<form (ngSubmit)="login()" [formGroup]="credentials" class="form">
-		
-
-		<ion-item fill="solid" class="ion-input">
-			<ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
-			<ion-note slot="error" *ngIf="(email?.dirty || email?.touched) && email?.errors">
-
-				Email is invalid!!</ion-note
-			>
-		</ion-item>
-		<ion-item fill="solid" class="ion-margin-bottom">
-			<ion-input type="password" placeholder="Password" formControlName="password"></ion-input>
-			<ion-note slot="error" *ngIf="(password?.dirty || password?.touched) && password?.errors">
-
-				Password needs to be atleast 6 characters!</ion-note
-			>
-		</ion-item>
-		<ion-item class="buttons">
-		<ion-button class="login-btn" type="submit" expand="block" [disabled]="!credentials.valid">Log in</ion-button>
-		<ion-button class="signup-btn" type="button" expand="block" color="secondary" (click)="register()"
-			>Create account</ion-button
-		>
-		</ion-item>
-		
-	</form>
-</ion-content> -->
