--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,4 +1,6 @@
-ion-grid {
+//main container
+//ion-grid
+.container {
   background-image: url("../../../assets/bgimg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -11,56 +13,14 @@ ion-grid {
   margin-top: 5%;
   padding: none;
 }
-ion-item-divider {
-  border-color: black;
-}
-div {
-  border-left: 5px solid #353535;
-  height: 90%;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-ion-row {
+
+//ion-row
+.container-content {
   width: 100%;
   height: 80%;
 }
-.login-form {
-  margin: auto;
-  height: 100%;
-  background-color: rgb(214, 201, 190);
-  .input {
-    color: black;
-  }
-  .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    background-color: rgb(214, 202, 185);
-    padding: 18px;
 
-    .ion-input {
-      --border-style: none;
-    }
-  }
-}
-ion-item {
-  --background: transparent; /* remove the default background color */
-}
-
-.login-btn {
-  width: 100%;
-  font-size: 80%;
-  margin-top: 35px;
-
-  --background: #333333;
-  --border-style: none;
-}
-.login-btn + .login-btn {
-  margin-left: 15px;
-}
-
+//ion-col
 .company-info {
   display: flex;
   flex-direction: column;
@@ -69,61 +29,94 @@ ion-item {
   height: 100%;
   padding: 15px;
   color: #353535;
+  border-right: 5px solid #353535;
   h1 {
     font-size: 3rem;
     margin-bottom: 5px;
   }
+  p {
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
 }
 
-ion-note {
-  background-color: transparent !important;
+//ion-col
+.login-form {
+  margin: auto;
+  height: 100%;
+  --background: transparent;
+  .form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(214, 202, 185);
+    padding: 18px;
+    ion-item {
+      --background: transparent; /* remove the default background color */
+    }
+    .input {
+      //input for email and password
+      color: black;
+    }
+    .login-button-row {
+      --border-style: none;
+    }
+    .login-button {
+      width: 100%;
+      font-size: 80%;
+      margin: 35px 0 0 15px;
+      --background: #333333;
+    }
+  }
 }
 
-p {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
+@media (max-width: 900px) {
+  /* main container */
+  /* ion-grid */
+  .container {
+    width: 80%;
+    margin-top: 10%;
+    height: 70%;
+  }
+
+  /* ion-row */
+  .container-content {
+    width: 90%;
+    height: 80%;
+  }
+
+  /* ion-col */
+  .company-info {
+    text-align: center;
+    height: 20%;
+    width: 100%;
+    border-bottom: 5px solid #353535;
+    border-right: none;
+    h1 {
+      font-size: 34px;
+    }
+    p {
+      display: none;
+      font-size: 16px;
+      margin: auto;
+    }
+  }
+
+  /* ion-col */
+  .login-form {
+    margin: auto;
+    height: 70%;
+
+    .form {
+      height: 100%;
+      background-color: rgb(224, 212, 204);
+
+      .form-button {
+        display: flex;
+        flex-direction: column !important;
+      }
+    }
+  }
 }
-
-//   ion-item {
-//     background-color: transparent !important;
-//     .ion-input {
-//        font-size: 16px;
-//         padding: 10px;
-//         --background: transparent;
-
-//     }
-
-//   background-color: transparent !important;
-//   justify-content: flex-end;
-
-//       .btn {
-//         font-size: 80%;
-//         // color: black;
-//         // padding: 10px;
-
-//         //   background-color: black;
-
-//       }
-
-//  .ion-padding{
-//     background-image: url('../../../assets/bgimg.jpg');
-//  }
-//  form {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//     height: 70%;
-//     margin: auto;
-//     margin-top: 10%;
-//     max-width: 85%;
-//      background-image: url('../../../assets/bgimg.jpg');
-//     box-shadow: 0px 0px 10px rgb(238, 232, 232);
-//   }
-//  ion-item {
-//     --background: transparent; /* remove the default background color */
-//   }
-
-//   ion-button {
-//     width: 100%;
-//   }
